# NumpySpec

./: .cursorrules  .gitignore  .mcp.json  AGENT.md  BignumLean.lean  CHANGELOG.md  CLAUDE.md  DafnySpecs.lean  FuncTracker.lean  GaussianSpec.lean  INTEGRATE_NUMPYSPEC_LEANEXPLORE.md  Justfile  MCP_SETUP.md  Main.lean  NDArray.lean  NUMPYSPEC_ADD_SUMMARY.md  NUMPY_PORTING_ORDER.md  Numpy.lean  NumpySpec.lean  README.md  STACK_PR_PLAN.md  codex-install.sh  example_input.py  extract_numpyspec.py  generate_ground_truth.py  install.sh  json_to_lean.py  lake-manifest.json  lakefile.lean  lakefile.toml  lean-toolchain  mcp-config.json  notes.md  numpy_dependency_analysis.txt  numpy_functions_formal_spec.md  numpyspec_declarations.jsonl  parse_svg_graph.py  pipeline.md  pyproject.toml  roadmap.md  (+9 more)
.cursor/: mcp.json
.history/: .mcp_20250630173541.json  .mcp_20250630173544.json  .mcp_20250630173547.json  .mcp_20250630173549.json  .mcp_20250701151742.json  .mcp_20250701151752.json  .mcp_20250701155331.json  .mcp_20250701155333.json  .mcp_20250701155334.json  .mcp_20250701155335.json  .mcp_20250701155509.json  .mcp_20250701155511.json  .mcp_20250701155512.json  .mcp_20250701155522.json
DafnySpecs/: Abs.lean  Add.lean  BitwiseAnd.lean  BitwiseOr.lean  BitwiseXor.lean  Copy.lean  CumProd.lean  CumSum.lean  Equal.lean  FloorDivide.lean  Gcd.lean  Greater.lean  GreaterEqual.lean  Invert.lean  Lcm.lean  LeftShift.lean  Less.lean  LessEqual.lean  Max.lean  Min.lean  Mod.lean  Multiply.lean  NotEqual.lean  NpAbs.lean  NpAdd.lean  NpArange.lean  NpArgmax.lean  NpBitwiseAnd.lean  NpBitwiseOr.lean  NpBitwiseXor.lean  NpCopy.lean  NpCumProd.lean  NpCumSum.lean  NpEqual.lean  NpFloorDivide.lean  NpGcd.lean  NpGreater.lean  NpGreaterEqual.lean  NpInvert.lean  NpLcm.lean  (+25 more)
FuncTracker/: Basic.lean  BasicV2.lean  CLAUDE.md  Example.lean  Macro.lean  Maze.lean  Native2D.lean  Parser.lean  Pretty.lean  Syntax.lean  TableParserPlan.md  Test.lean  TestMinimal.lean
GaussianSpec/: Basic.lean  Manual.lean
NDArray/: NDArray.lean  Test.lean
Numpy/: ArrayManipulation.lean  Broadcasting.lean  IndexingAndSelection.lean  LinearAlgebra.lean  LogicalFunctions.lean  OneDimensional.lean  Sort.lean  Statistics.lean
NumpySpec/: CLAUDE.md  Constants.lean  DafnyBenchmarks.lean  GroundTruth.lean  LEAN_FILE_SPECIFICATION_STATUS.md  NUMPY_SPEC_STATUS_REPORT.md  Numpy_Absolute.lean  Numpy_Any.lean  Numpy_Argmax.lean  (+19 more)
SpecDraft/: pyproject.toml
SpecDraft/scripts/: evaluate_model.py
SpecDraft/src/specdraft/: __init__.py
SpecDraft/src/specdraft.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
SpecDraft/src/specdraft/data/array/impl_1/: Main.lean  lakefile.toml
SpecDraft/src/specdraft/data/array/impl_1/LeanArrayLib/: Core.lean  Indexing.lean  View.lean
SpecDraft/src/specdraft/data/array/impl_2/: LeanArrayLib.lean  Main.lean  lakefile.toml
SpecDraft/src/specdraft/data/array/impl_2/LeanArrayLib/: Index.lean  Layout.lean  LeanArray.lean  Memory.lean
SpecDraft/src/specdraft/data/array/scilean/: Main.lean  README.md  lake-manifest.json
SpecDraft/src/specdraft/data/constants/: numpy_e_spec.lean  numpy_euler_gamma.py  numpy_inf.lean  numpy_inf.py  numpy_nan_spec.lean
SpecDraft/tests/: test_models.py
(+946 files in other folders)
