[project]
name = "gaussianspec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alok Singh", email = "alokbeniwal@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "morphcloud>=0.1.57",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "pytesseract>=0.3.13",
]

[project.scripts]
gaussianspec = "gaussianspec:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
