[project]
name = "gaussianspec"
version = "0.1.0"
description = "Gaussian elimination specification"
readme = "README.md"
authors = [{ name = "Alok Singh", email = "alokbeniwal@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "morphcloud>=0.1.57",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "pytesseract>=0.3.13",
    "pantograph>=0.3.0",
    "gymnasium>=0.29.1",
    "torch>=2.3.0",
    "transformers>=4.41.0",
    "huggingface_hub>=0.23.0",
    "accelerate>=0.30.0",
    "stable-baselines3>=2.3.0",
    "pytest>=8.2.1",
]

[project.scripts]
gaussianspec = "gaussianspec:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pantograph = { git = "https://github.com/lenianiva/PyPantograph", branch = "fixed/v4.16.0-rc1" }
