# /home/hantao/code/formal/SpecDraft/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "specdraft"          # distribution name seen on PyPI
version = "0.0.1"
description = "SpecDraft: formal spec experiments"
readme = "README.md"        # optional but nice
authors = [{name = "Hantao Lou"}]
# If your code needs other packages, list them here:
dependencies = []
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]             # <-- see layout note below